# xray-image-simulator2

./: README.md  pyproject.toml  pytest.ini
src/simulator/: gui.py  simulate.py
tests/: test_simulate.py
